--- a/public_html/layouts/basic/styles/libraries/_Quasar.scss
+++ b/public_html/layouts/basic/styles/libraries/_Quasar.scss
@@ -1,4 +1,9 @@
 /* {[The file is published on the basis of YetiForce Public License 3.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
-.row {
+.quasar-container .row {
 	margin: unset;
+}
+
+.quasar-container {
+	margin-left: -0.5rem;
+	margin-right: -0.5rem;
 }
