--- a/public_html/src/css/app.css
+++ b/public_html/src/css/app.css
@@ -5270,7 +5270,7 @@ input[type='search']::-webkit-search-decoration {
   border-radius: 0;
 }
 .q-badge {
-  background-color: #406a95;
+  background-color: #006cdf;
   background-color: var(--q-color-primary);
   color: #fff;
   padding: 2px 6px;
@@ -5945,7 +5945,7 @@ a.q-btn {
 }
 .q-checkbox__inner--active,
 .q-checkbox__inner--indeterminate {
-  color: #406a95;
+  color: #006cdf;
   color: var(--q-color-primary);
 }
 .q-checkbox__inner--active .q-checkbox__bg,
@@ -5978,7 +5978,7 @@ a.q-btn {
 }
 .q-checkbox--dark .q-checkbox__inner--active,
 .q-checkbox--dark .q-checkbox__inner--indeterminate {
-  color: #406a95;
+  color: #006cdf;
   color: var(--q-color-primary);
 }
 .q-checkbox--dark.disabled .q-checkbox__inner,
@@ -6366,7 +6366,7 @@ body.desktop .q-chip--clickable:focus {
 .q-date__header {
   border-top-left-radius: inherit;
   color: #fff;
-  background-color: #406a95;
+  background-color: #006cdf;
   background-color: var(--q-color-primary);
   padding: 16px;
 }
@@ -6550,7 +6550,7 @@ body.desktop .q-chip--clickable:focus {
 .q-time__header {
   border-top-left-radius: inherit;
   color: #fff;
-  background-color: #406a95;
+  background-color: #006cdf;
   background-color: var(--q-color-primary);
   padding: 16px;
   font-weight: 300;
@@ -6620,7 +6620,7 @@ body.desktop .q-chip--clickable:focus {
   left: 50%;
   right: 0;
   bottom: 0;
-  color: #406a95;
+  color: #006cdf;
   color: var(--q-color-primary);
   background: currentColor;
   transform: translate3d(-50%, 0, 0);
@@ -6660,7 +6660,7 @@ body.desktop .q-chip--clickable:focus {
   opacity: 0.4;
 }
 .q-time__clock-position--active {
-  background-color: #406a95;
+  background-color: #006cdf;
   background-color: var(--q-color-primary);
   color: #fff;
 }
@@ -6809,7 +6809,7 @@ body.desktop .q-chip--clickable:focus {
   left: 50% /* rtl:ignore */;
 }
 .q-time__now-button {
-  background-color: #406a95;
+  background-color: #006cdf;
   background-color: var(--q-color-primary);
   color: #fff;
   top: 12px;
@@ -7158,7 +7158,7 @@ body.desktop .q-chip--clickable:focus {
   height: inherit;
 }
 .q-field__control {
-  color: #406a95;
+  color: #006cdf;
   color: var(--q-color-primary);
   height: 56px;
   max-width: 100%;
@@ -7705,7 +7705,7 @@ body.mobile .q-textarea .q-field__native,
   box-shadow: 0 0 10px 2px rgba(0,0,0,0.2), 0 0px 10px rgba(0,0,0,0.24);
 }
 .q-layout__section--marginal {
-  background-color: #406a95;
+  background-color: #006cdf;
   background-color: var(--q-color-primary);
   color: #fff;
 }
@@ -7876,7 +7876,7 @@ body.q-ios-statusbar-x .modal:not(.minimized) .q-footer > .q-toolbar:last-child 
   width: 100%;
   overflow: hidden;
   height: 4px;
-  color: #406a95;
+  color: #006cdf;
   color: var(--q-color-primary);
 }
 .q-linear-progress--reverse {
@@ -8184,7 +8184,7 @@ body.q-ios-statusbar-x .modal:not(.minimized) .q-footer > .q-toolbar:last-child 
 }
 .q-item.q-router-link--active,
 .q-item--active {
-  color: #406a95;
+  color: #006cdf;
   color: var(--q-color-primary);
 }
 .q-slide-item {
@@ -8291,7 +8291,7 @@ body.q-ios-statusbar-x .modal:not(.minimized) .q-footer > .q-toolbar:last-child 
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  color: #406a95;
+  color: #006cdf;
   color: var(--q-color-primary);
   background: #fff;
   box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.3);
@@ -8345,7 +8345,7 @@ body.q-ios-statusbar-x .modal:not(.minimized) .q-footer > .q-toolbar:last-child 
   color: rgba(0,0,0,0.54);
 }
 .q-radio__inner--active {
-  color: #406a95;
+  color: #006cdf;
   color: var(--q-color-primary);
 }
 .q-radio__inner--active .q-radio__inner-circle {
@@ -8365,7 +8365,7 @@ body.q-ios-statusbar-x .modal:not(.minimized) .q-footer > .q-toolbar:last-child 
   opacity: 0.32 !important;
 }
 .q-radio--dark .q-radio__inner--active {
-  color: #406a95;
+  color: #006cdf;
   color: var(--q-color-primary);
 }
 .q-radio--dark.disabled .q-radio__inner,
@@ -8532,7 +8532,7 @@ body.desktop .q-radio--dense:focus:not(.disabled) .q-radio__inner:before {
   position: relative;
   width: 100%;
   height: 40px;
-  color: #406a95;
+  color: #006cdf;
   color: var(--q-color-primary);
   outline: 0;
 }
@@ -8918,7 +8918,7 @@ body.desktop .q-radio--dense:focus:not(.disabled) .q-radio__inner:before {
 }
 .q-stepper__tab--active,
 .q-stepper__tab--done {
-  color: #406a95;
+  color: #006cdf;
 }
 .q-stepper__tab--active .q-stepper__dot,
 .q-stepper__tab--done .q-stepper__dot,
@@ -9851,7 +9851,7 @@ body.mobile .q-tabs__arrow {
   padding: 13px 12px;
 }
 .q-toggle__inner--active {
-  color: #406a95;
+  color: #006cdf;
   color: var(--q-color-primary);
 }
 .q-toggle__inner--active .q-toggle__track {
@@ -9888,7 +9888,7 @@ body.mobile .q-tabs__arrow {
   color: rgba(255,255,255,0.7);
 }
 .q-toggle--dark .q-toggle__inner--active {
-  color: #406a95;
+  color: #006cdf;
   color: var(--q-color-primary);
 }
 .q-toggle--dark .q-toggle__thumb:before {
@@ -10131,7 +10131,7 @@ body.desktop .q-toggle:focus:not(.disabled) .q-toggle__thumb:before {
   position: relative;
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
-  background-color: #406a95;
+  background-color: #006cdf;
   background-color: var(--q-color-primary);
   color: #fff;
   width: 100%;
@@ -10535,7 +10535,7 @@ body.q-ios-statusbar-x .q-notifications__list--bottom {
   }
 }
 :root {
-  --q-color-primary: #406a95;
+  --q-color-primary: #006cdf;
   --q-color-secondary: #26a69a;
   --q-color-accent: #9c27b0;
   --q-color-positive: #21ba45;
@@ -10544,11 +10544,11 @@ body.q-ios-statusbar-x .q-notifications__list--bottom {
   --q-color-warning: #f2c037;
 }
 .text-primary {
-  color: #406a95 !important;
+  color: #006cdf !important;
   color: var(--q-color-primary) !important;
 }
 .bg-primary {
-  background: #406a95 !important;
+  background: #006cdf !important;
   background: var(--q-color-primary) !important;
 }
 .text-secondary {
