Improved knowledge base tree layout (#10436)
* Added axiosand minor improvements to vue

* Added search box and displayed first categories

* Reverted babel

* Improved contentsDiv styles

* Cleaned code

* Added simple menu

* Changed articles list to q-table

* Added tree records preview

* Overwrote quasar css variables

* Improved click events and test data

* Updated package.json

* Removed test data

* Adjusted tree component to data from server

* Improved tree layout and events

* Removed log

* Added breadcrumb

* Exposed search method

* Improved tree navigation and search

* Added icon component and other improvements

* Removed bugs, added progress indicator

* Added main breadcrumb to knowledge base tree

* Improved styles

* Improved tree header styles

* Turn off qtable pagination

* Customized KnowledgeBase popover record

* Added knowledge base tree record preview

* Toggle components when search is active

* Corrected list layout

* Removed logs, added dev files

* Reverted yarn.lock

--- a/public_html/layouts/basic/styles/libraries/_Quasar.scss
+++ b/public_html/layouts/basic/styles/libraries/_Quasar.scss
@@ -1,4 +1,14 @@
 /* {[The file is published on the basis of YetiForce Public License 3.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
-.row {
-	margin: unset;
+.quasar-reset {
+	.row {
+		margin: unset;
+	}
+	.col {
+		padding: unset;
+	}
+}
+.quasar-container {
+	height: calc(100% - #{calculate-rem(45px)});
+	margin-left: -0.5rem;
+	margin-right: -0.5rem;
 }
