--- a/public_html/src/css/app.variables.css
+++ b/public_html/src/css/app.variables.css
@@ -1,11 +1,7 @@
 /* {[The file is published on the basis of YetiForce Public License 3.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
-
-'use strict';
-
-jQuery.Class('KnowledgeBase_Tree_Js', {
-	registerEvents: function() {
-		KnowledgeBaseTree.mount({
-			el: '#KnowledgeBaseTree'
-		});
-	}
-});
+.text-yeti {
+  color: #406a95;
+}
+.bg-yeti {
+  background: #406a95;
+}
