Added knowledge base modal

--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -18839,6 +18839,18 @@ label.btn[class*=btn-outline-]:not(.active):hover {
   margin-right: -0.5rem;
 }
 
+.quasar-modal {
+  padding: unset !important;
+}
+
+.quasar-modal .modal-content {
+  height: 100vh;
+}
+
+.quasar-modal .q-layout-container {
+  height: calc(100vh - 33px);
+}
+
 /* {[The file is published on the basis of YetiForce Public License 3.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
 @media print {
   .noprint {
