--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -18840,15 +18840,13 @@ label.btn[class*=btn-outline-]:not(.active):hover {
 }
 
 .quasar-modal {
-  padding: unset !important;
-  top: 50px;
-  right: 32px;
+  top: 0;
+  right: 0;
   left: 0;
-  max-width: calc(100% - 50px);
-  width: calc(100% - 50px);
-  margin-left: 50px;
-  margin-right: 0;
-  height: calc(100% - 80px);
+  bottom: 0;
+  padding-top: 50px;
+  padding-bottom: 30px;
+  padding-left: 50px;
 }
 
 .quasar-modal .modal-content {
