--- a/public_html/layouts/basic/styles/libraries/_Quasar.scss
+++ b/public_html/layouts/basic/styles/libraries/_Quasar.scss
@@ -13,18 +13,16 @@
 	margin-right: -0.5rem;
 }
 .quasar-modal {
-	padding: unset !important;
 	.modal-content {
 		height: 100%;
 	}
-	top: 50px;
-	right: 32px;
+	top: 0;
+	right: 0;
 	left: 0;
-	max-width: calc(100% - 50px);
-	width: calc(100% - 50px);
-	margin-left: 50px;
-	margin-right: 0;
-	height: calc(100% - 80px);
+	bottom: 0;
+	padding-top: 50px;
+	padding-bottom: 30px;
+	padding-left: 50px;
 
 	.q-layout-container {
 		height: calc(100vh - 113px);
