Add Kanban Board

--- a/public_html/layouts/basic/styles/Main.scss
+++ b/public_html/layouts/basic/styles/Main.scss
@@ -37,6 +37,7 @@
 @import "pages/_Detail";
 @import "pages/_List";
 @import "pages/_ListPreview";
+@import "pages/_Kanban";
 
 //-------- settings --------//
 @import "pages/Settings/_Dashboard";
