--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -20453,16 +20453,9 @@ ul.c-process-line {
   box-sizing: border-box;
   word-wrap: break-word; }
   .detailViewTitle .hierarchy {
-    position: relative;
-    top: -2.6875rem;
-    left: -1.6875rem; }
-    .IStorages_Detail .detailViewTitle .hierarchy,
-    .SSalesProcesses_Detail .detailViewTitle .hierarchy {
-      top: -2.5625rem;
-      left: -1.1875rem; }
-    .MultiCompany_Detail .detailViewTitle .hierarchy {
-      top: -2.75rem;
-      left: -1.375rem; }
+    position: absolute;
+    margin-left: -1.25rem;
+    margin-top: -0.3125rem; }
   .detailViewTitle .popover {
     min-width: 8.125rem;
     text-align: center; }
