--- a/public_html/layouts/basic/styles/pages/_Detail.scss
+++ b/public_html/layouts/basic/styles/pages/_Detail.scss
@@ -550,20 +550,9 @@ $progress-dot-size: calc(100% - #{calculate-rem(6px)});
 	word-wrap: break-word;
 
 	.hierarchy {
-		position: relative;
-		top: calculate-rem(-43px);
-		left: calculate-rem(-27px);
-
-		@at-root .IStorages_Detail #{&},
-			.SSalesProcesses_Detail #{&} {
-			top: calculate-rem(-41px);
-			left: calculate-rem(-19px);
-		}
-
-		@at-root .MultiCompany_Detail #{&} {
-			top: calculate-rem(-44px);
-			left: calculate-rem(-22px);
-		}
+		position: absolute;
+		margin-left: calculate-rem(-20px);
+		margin-top: calculate-rem(-5px);
 	}
 
 	.popover {
