Added minor improvements

--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -8912,7 +8912,7 @@ a.text-dark:hover, a.text-dark:focus {
     border: 1px solid #000; }
   .table, .c-detail-widget__table {
     border-collapse: collapse !important; }
-    
+
     .table td,
     .c-detail-widget__table td, .table th, .c-detail-widget__table th {
       background-color: #fff !important; }
@@ -15877,6 +15877,12 @@ table .listButtons.narrow .c-badge__icon {
 
 .u-bg-light-green {
   background-color: #b2dfdb !important; }
+
+.u-bg-light-orange {
+  background-color: #ffe0b2 !important; }
+
+.u-bg-light-brown {
+  background-color: #d7ccc8 !important; }
 
 .u-hover-container .u-hover-display-inline {
   display: none; }
