--- a/public_html/layouts/basic/styles/components/_Utilities.scss
+++ b/public_html/layouts/basic/styles/components/_Utilities.scss
@@ -167,6 +167,12 @@
 .u-bg-light-green {
 	background-color: #b2dfdb !important;
 }
+.u-bg-light-orange {
+	background-color: #ffe0b2 !important;
+}
+.u-bg-light-brown {
+	background-color: #d7ccc8 !important;
+}
 
 .u-hover-container {
 	.u-hover-display-inline {
