Changed Sass compiler

--- a/public_html/layouts/basic/styles/_Functions.scss
+++ b/public_html/layouts/basic/styles/_Functions.scss
@@ -1,5 +1,7 @@
+@use "sass:math";
+
 @function calculate-rem($size) {
-	$rem-size: $size / 16px;
+	$rem-size: math.div($size, 16px);
 
 	@return #{$rem-size}rem;
 }
