--- a/public_html/layouts/basic/styles/_Variables.scss
+++ b/public_html/layouts/basic/styles/_Variables.scss
@@ -28,7 +28,7 @@ $grid-breakpoints: (
 );
 
 //flag-icons
-$flag-icon-css-path: "../../../libraries/flag-icon-css/flags/";
+$flag-icons-path: "../../../libraries/flag-icon-css/flags/";
 
 //-------- sizes --------//
 $w-icon-button: calculate-rem(42px);
