--- a/public_html/layouts/basic/styles/components/_Checkbox.scss
+++ b/public_html/layouts/basic/styles/components/_Checkbox.scss
@@ -114,3 +114,63 @@ input[type="radio"]:checked {
 input[type="radio"]:checked:before {
 	background-color: #4a5364;
 }
+
+// switch in marketplace
+.c-checkbox-input {
+	position: fixed;
+	visibility: hidden;
+}
+
+.c-checkbox-slider {
+	position: relative;
+	display: block;
+	width: 5.5em;
+	height: 1em;
+	cursor: pointer;
+	border-radius: 1.5em;
+	transition: 350ms;
+}
+
+.c-checkbox-slider::after {
+	position: absolute;
+	content: "";
+	width: 1.5em;
+	height: 1.5em;
+	top: -0.3em;
+	left: -0.3em;
+	border-radius: 50%;
+	transition: 250ms ease-in-out;
+	background: linear-gradient(#f5f5f5 10%, #eee);
+	box-shadow: 0 0.1em 0.15em -0.05em rgba(#fff, 0.9) inset, 0 0.2em 0.2em -0.12em rgba(#000, 0.5);
+}
+
+.c-checkbox-slider::before {
+	position: absolute;
+	content: "";
+	width: 4em;
+	height: 1em;
+	border-radius: 0.75em;
+	transition: 250ms ease-in-out;
+	background: linear-gradient(rgba(#000, 0.07), rgba(#fff, 0.1)), #d0d0d0;
+}
+
+.c-checkbox-input:checked + .c-checkbox-slider::before {
+	box-shadow: 0 0.08em 0.15em -0.1em rgba(#000, 0.5) inset, 0 0.05em 0.08em -0.01em rgba(#fff, 0.7),
+		3em 0 0 0 rgba(#4c6, 0.7) inset;
+}
+
+.c-checkbox-input:checked + .c-checkbox-slider::after {
+	left: 3em;
+}
+
+@media (max-width: 400px) {
+	.c-checkbox-slider {
+		width: 2em;
+	}
+	.c-checkbox-slider::before {
+		width: 2em;
+	}
+	.c-checkbox-input:checked + .c-checkbox-slider::after {
+		left: 1em;
+	}
+}
