Added minor improvements

--- a/public_html/layouts/basic/styles/libraries/_Libraries.scss
+++ b/public_html/layouts/basic/styles/libraries/_Libraries.scss
@@ -540,6 +540,10 @@ body:not(.desktop) {
 .pnotify .bootstrap4-icon > * {
 	line-height: 1.5rem;
 }
+.pnotify-action-bar {
+	margin-top: 1rem;
+}
+
 //-------- Material Design Icons --------//
 .mdi {
 	line-height: 1;
